[package]
name = "rust-paint"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.18.1"
egui-wgpu = "0.18"
egui-winit = { version = "0.18", default-features = false, features = ["links"] }
env_logger = "0.9"
log  ="0.4"
pixels = "0.9"
winit = "0.26"
winit_input_helper = "0.12"